support neon db

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,8 @@
   # Omit known non-sensitive env keys used in the frontend
   SECRETS_SCAN_OMIT_KEYS = "ALGOLIA_INDEX_NAME,ALGOLIA_APPLICATION_ID,ALGOLIA_SEARCH_API_KEY"
 
+[functions]
+  directory = "../netlify/functions"
+  node_bundler = "esbuild"
+  external_node_modules = ["@neondatabase/serverless", "jose"]
+
