add neon extension to netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,7 @@
   directory = "../netlify/functions"
   node_bundler = "esbuild"
 
+[[extensions]]
+package = "."
+extension = "netlify-build-extension-neon"
+
