--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+frontend/.env
 
 # Spyder project settings
 .spyderproject
@@ -132,3 +133,6 @@ frontend/config.js
 frontend/node_modules/
 
 .cursorrules
+
+# Local Netlify folder
+.netlify
