add google analytics support

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@
   # Exclude the generated config (contains search-only key) from secrets scanning
   SECRETS_SCAN_OMIT_PATHS = "config.js"
   # Omit known non-sensitive env keys used in the frontend
-  SECRETS_SCAN_OMIT_KEYS = "ALGOLIA_INDEX_NAME,ALGOLIA_APPLICATION_ID,ALGOLIA_SEARCH_API_KEY,EMAILJS_PUBLIC_KEY,EMAILJS_SERVICE_ID,EMAILJS_TEMPLATE_ID"
+  SECRETS_SCAN_OMIT_KEYS = "ALGOLIA_INDEX_NAME,ALGOLIA_APPLICATION_ID,ALGOLIA_SEARCH_API_KEY,EMAILJS_PUBLIC_KEY,EMAILJS_SERVICE_ID,EMAILJS_TEMPLATE_ID,GA_MEASUREMENT_ID"
 
 [functions]
   directory = "netlify/functions"
